gcc/testsuite/rust/rustc/ui/issues/issue-38458.rs
const x: () = {
    return; // { dg-error ".E0572." "" { target *-*-* } }
};

fn main() {}

